# SciKit_plusplus

./: .gitignore  CMakeLists.txt  README.md  install_dependencies.sh  main.cpp  make_tests.sh  mall_data_2d.csv
include/k_means_clustering/: point.h
include/neural_nets/: activations.h  data.h  layers.h  losses.h  module.h  sequential.h
include/svm/: data_utils.h  smo_utils.h
k_means_clustering/: README.md  k_means.cpp  k_means.h  point.cpp  utils.cpp  utils.h
neural_nets/: UnitTest_LinearLayer.h  activations.cpp  activations.h  layers.cpp  layers.h  losses.cpp  losses.h  module.h  roadmap.txt  sequential.cpp  sequential.h
src/k_means_clustering/: CMakeLists.txt  k_means.cpp
src/neural_nets/: CMakeLists.txt  activations.cpp  layers.cpp  losses.cpp  sequential.cpp
src/svm/: CMakeLists.txt  binary_svm.cpp  data_utils.cpp
svm/: README.md  binary_svm.cpp  binary_svm.h  data_utils.cpp  data_utils.h  kernels.cpp  kernels.h  smo_utils.cpp  smo_utils.h  utils.cpp  utils.h  wdbc_data_formatted.csv
test/neural_nets/: CMakeLists.txt  UnitTest_LinearLayer.cpp  integrationTest_sequential.cpp  main.cpp  unitTest_activations.cpp  unitTests_layers.cpp  unitTests_losses.cpp  unitTests_sequential.cpp
